ensure content like from document doesn't make the dialog size explode

BUG: 497328